updated buttons and slider text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
   </head>
   <body>
-	<canvas id="canvas"></canvas>	
+  <canvas id="canvas"></canvas>	
+    <div id="sliderName">Speed Slider</div>
     <input type="button" id="startBtn" value="Start" onClick="startGame()"/>
     <input type="button" id="pauseBtn" value="Pause" onClick="gamePause()"/>
     <input type="button" id="stepBtn" value="Step" onClick="doStep()"/>
