updated ReadMe and added rules of game

--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 
   </head>
   <body>
+    <div id="golRules">
+         GAME OF LIFE RULES! <br>
+      <br>         
+      1. Any live cell with fewer than two live neighbours dies, as if by underpopulation. <br>
+      <br>
+      2. Any live cell with two or three live neighbours lives on to the next generation. <br>
+      <br>
+      3. Any live cell with more than three live neighbours dies, as if by overpopulation. <br>
+      <br>
+      4. Any dead cell with exactly three live neighbours becomes a live cell, as if by reproduction.
+    </div>
   <canvas id="canvas"></canvas>	
     <div id="sliderName">Speed Slider</div>
     <input type="button" id="startBtn" value="Start" onClick="startGame()"/>
