updated made image of John Conway a link to wikipedia

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 <body>
   <div id=titleBanner>Conway's Game of Life</div>
-  <img id="imgSizer" src="https://i.ytimg.com/vi/y5ARAxW2k_4/maxresdefault.jpg" alt="John Conway">
+  <a href= "https://en.wikipedia.org/wiki/John_Horton_Conway">
+    <img id="imgSizer" src="https://i.ytimg.com/vi/y5ARAxW2k_4/maxresdefault.jpg" alt="John Conway">
+  </a>
   <div id="golRules">
     GAME OF LIFE RULES! <br>
     <br>
